Added all activities, populated xml

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -58,8 +58,9 @@
 
     <ImageView
         android:id="@+id/ivPostImage"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
         tools:src="@tools:sample/avatars"/>
 
     <Button
@@ -67,5 +68,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Share"/>
-
 </LinearLayout>
