--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -20,7 +20,7 @@
         android:layout_height="150dp"
         android:padding="8dp"
         android:layout_centerHorizontal="true"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         tools:srcCompat="@tools:sample/avatars"
         android:layout_below="@id/tvDescription" />
 
