--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -86,10 +86,12 @@
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="8dp"
+        android:layout_height="150dp"
         android:layout_below="@id/ivPicture"
         android:layout_centerHorizontal="true"/>
+
     <Button
         android:id="@+id/btnContact"
         android:layout_width="wrap_content"
