--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -14,10 +14,10 @@
         android:padding="8dp"
         android:text="20 minutes ago" />
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/ivPicture"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:padding="8dp"
         android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"
