--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -41,18 +41,34 @@
         android:hint="Email"
         android:layout_below="@id/tvConfirm"/>
     <Button
-        android:id="@+id/btnPicture"
+    android:id="@+id/btnPicture"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:text="Take profile picture"
+    android:layout_below="@id/tvEmail"/>
+    <Button
+        android:id="@+id/btnGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="@string/add_picture"
-        android:layout_below="@id/tvEmail"/>
+        android:text="Choose profile picture"
+        android:layout_below="@id/btnPicture"/>
+
+    <ImageView
+        android:id="@+id/ivPreview"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        tools:srcCompat="@tools:sample/avatars"
+        android:layout_centerHorizontal="true"
+        android:padding="8dp"
+        android:layout_below="@id/btnGallery"/>
     <Button
         android:id="@+id/btnCreateAccount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/create"
-        android:layout_below="@id/btnPicture"/>
+        android:layout_below="@id/ivPreview"/>
 
 </RelativeLayout>
