--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -14,13 +14,15 @@
         android:paddingTop="16dp"
         android:paddingRight="8dp"
         android:paddingBottom="16dp"
-        android:text="Bike Condition" />
+        android:text="Bike Condition"
+        android:layout_below="@id/ivPostImage"/>
 
     <Spinner
         android:id="@+id/sConditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tvCondition" />
+        android:layout_toRightOf="@id/tvCondition"
+        android:layout_below="@id/ivPostImage"/>
 
     <TextView
         android:id="@+id/tvPrice"
@@ -29,6 +31,7 @@
         android:layout_below="@id/tvCondition"
         android:paddingRight="8dp"
         android:paddingLeft="8dp"
+        android:paddingTop="8dp"
         android:text="Price" />
 
     <EditText
@@ -46,7 +49,7 @@
         android:id="@+id/tvAvailability"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvPrice"
+        android:layout_below="@id/etPrice"
         android:paddingLeft="8dp"
         android:paddingTop="16dp"
         android:paddingRight="8dp"
@@ -76,7 +79,7 @@
         android:id="@+id/btnCaptureImage"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/etDescription"
+        android:layout_toRightOf="@id/ivPostImage"
         android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
         android:text=" Take picture" />
 
@@ -84,9 +87,8 @@
         android:id="@+id/btnChoose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/etDescription"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/btnCaptureImage"
+        android:layout_below="@id/btnCaptureImage"
+        android:layout_toRightOf="@id/ivPostImage"
         android:drawableLeft="@drawable/ic_baseline_photo_library_24"
         android:text=" Choose from gallery" />
 
@@ -95,15 +97,13 @@
         android:id="@+id/ivPostImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_below="@id/btnChoose"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        tools:src="@tools:sample/avatars" />
+        tools:src="@tools:sample/avatars"
+        android:padding="8dp"/>
 
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ivPostImage"
+        android:layout_below="@id/etDescription"
         android:text="Share" />
 </RelativeLayout>
