--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -33,12 +33,14 @@
 
     <Button
         android:id="@+id/btnChangeUsername"
-        android:layout_width="wrap_content"
+        android:layout_width="143dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnLogout"
         android:layout_alignParentRight="true"
+        android:layout_marginLeft="-22dp"
+        android:layout_toRightOf="@id/etnewuser"
         android:text="Change Username"
-        android:layout_toRightOf="@id/etnewuser"/>
+        android:layout_alignBaseline="@id/etnewuser"/>
 
     <EditText
         android:id="@+id/etnewuser"
@@ -48,6 +50,7 @@
         android:layout_alignBottom="@id/ivProfilePicture"
         android:layout_marginTop="0dp"
         android:layout_marginEnd="8dp"
+        android:hint="New Username"
         android:layout_marginBottom="-14dp"
         android:layout_toRightOf="@id/ivProfilePicture"
         tools:text="New Username" />
