--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -8,9 +8,11 @@
 
     <ImageView
         android:id="@+id/ivPostImg"
-        android:layout_width="400dp"
+        android:layout_width="200dp"
         android:layout_height="400dp"
         android:layout_centerHorizontal="true"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 
 </RelativeLayout>
