--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -2,9 +2,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/action_search"
-        android:orderInCategory="5"
+        android:orderInCategory="6"
         android:title="Search"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView" />
+    <item
+        android:id="@+id/filter_description"
+        android:orderInCategory="5"
+        android:title="Description"
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/filter_price"
+        android:orderInCategory="5"
+        android:title="Price"
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/filter_condition"
+        android:orderInCategory="5"
+        android:title="Condition"
+        app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/filter_availability"
+        android:orderInCategory="5"
+        android:title="Availability"
+        app:showAsAction="collapseActionView" />
 </menu>
