--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingRight="8dp"
         android:text="20 minutes ago" />
 
     <ImageView
