--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -29,7 +29,6 @@
         android:id="@+id/ivProfilePic"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
         android:padding="8dp"
         tools:layout_editor_absoluteX="2dp"
         tools:layout_editor_absoluteY="82dp"
@@ -49,7 +48,7 @@
         android:id="@+id/tvDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvUser"
+        android:layout_below="@id/tvRelativeDistance"
         android:layout_toRightOf="@id/ivProfilePic"
         android:paddingLeft="8dp"
         android:text="Description"
