--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -30,5 +30,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvTimestamp"/>
+        android:id="@+id/tvTimestamp"
+        android:layout_alignParentRight="true"
+        android:hint="22 minutes ago"
+        android:padding="8dp"/>
 </RelativeLayout>
