Users can add comments

--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -41,7 +41,7 @@
         android:layout_below="@id/sConditions"
         android:layout_toRightOf="@id/tvPrice"
         android:ems="10"
-        android:hint="Hourly bike rental price"
+        android:hint="Hourly bike rental price in USD"
         android:paddingTop="16dp"
         android:inputType="numberDecimal"/>
 
