--- a/app/src/main/res/layout/profile_item.xml
+++ b/app/src/main/res/layout/profile_item.xml
@@ -4,11 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivPostImg"
-        android:layout_width="200dp"
+        android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_centerHorizontal="true"
         tools:srcCompat="@tools:sample/avatars"
