--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:animateLayoutChanges="true">
 
     <TextView
         android:id="@+id/tvTimestamp"
@@ -16,13 +17,13 @@
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/ivPicture"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        tools:srcCompat="@tools:sample/avatars"
         android:layout_below="@id/tvDescription"
-        android:padding="8dp"/>
+        android:layout_centerHorizontal="true"
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/ivProfilePic"
@@ -119,13 +120,15 @@
         android:padding="8dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/rvComments"
-        android:layout_below="@id/btnContact"
-        android:padding="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_above="@+id/etComment"
-        />
+        android:layout_below="@id/btnContact"
+        android:layout_marginBottom="0dp"
+        android:animationCache="true"
+        android:padding="8dp" />
 
     <ImageView
         android:id="@+id/ivenlarge"
@@ -143,13 +146,23 @@
         android:layout_alignParentBottom="true"
         android:id="@+id/etComment"
         android:layout_toLeftOf="@id/btnpost"/>
+
     <Button
+        android:id="@+id/btnpost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnpost"
-        android:text="Post"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/rvComments"
-        android:layout_marginRight="8dp"/>
+        android:layout_marginRight="8dp"
+        android:text="Post"
+        android:layout_alignParentBottom="true"/>
+
+    <ImageView
+        android:id="@+id/ivCollapse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_baseline_call_received_24"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/tvDescription"
+        android:padding="8dp"/>
 
 </RelativeLayout>
