--- a/app/src/main/res/layout/activity_post_details.xml
+++ b/app/src/main/res/layout/activity_post_details.xml
@@ -137,7 +137,8 @@
         android:layout_above="@id/rvComments"
         android:layout_alignParentRight="true"
         android:padding="8dp"
-        app:srcCompat="@drawable/ic_baseline_call_made_24" />
+        app:srcCompat="@drawable/ic_baseline_call_made_24"
+        android:visibility="visible"/>
 
     <EditText
         android:layout_width="match_parent"
