--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/filter_price"
         android:orderInCategory="5"
-        android:title="Price"
+        android:title="Price Less Than"
         app:showAsAction="collapseActionView" />
     <item
         android:id="@+id/filter_condition"
